<resources>
    <string name="app_name">MyKeyboardSamples</string>
    <string name="sign_up">Sign UP</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_surname">Enter surname</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_date_of_birth">Enter Date of Birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="accept_terms_and_conditions">Accept Terms and Conditions</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="company_logo">Company Logo</string>
    <string-array name="spinner_label">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>