<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/teal"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/company_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/company_logo"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/company_logo"

        />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up"
        android:hint="@string/enter_first_name"
        android:textColorHint="@android:color/black"
        android:inputType="textCapSentences"
        android:drawableStart="@drawable/ic_account_box_white"
        android:textColor="@android:color/black"
        />

    <EditText
        android:id="@+id/surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up"
        android:layout_alignParentEnd="true"
        android:hint="@string/enter_surname"
        android:textColorHint="@android:color/black"
        android:inputType="textCapSentences"
        android:textColor="@android:color/black"

        />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstname"
        android:hint="@string/enter_email_address"
        android:textColorHint="@android:color/black"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_email_white"
        android:textColor="@android:color/black"

        />

    <EditText
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/email_address"
        android:textColorHint="@android:color/black"
        android:hint="@string/enter_date_of_birth"
        android:textColor="@android:color/black"
        android:drawableStart="@drawable/ic_calendar_white"

        />
    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/birthday"
        android:hint="@string/phone_number"
        android:textColorHint="@android:color/black"
        android:inputType="phone"
        android:textColor="@android:color/black"
        android:drawableStart="@drawable/ic_phone_white"


        />
    <Spinner
        android:id="@+id/phone_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/birthday"
        android:layout_alignEnd="@+id/phone"
        android:backgroundTint="@android:color/black"

        />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:layout_below="@+id/phone"
        android:inputType="textPassword"
        android:textColorHint="@android:color/black"
        android:textColor="@android:color/black"
        android:ems="10"
        android:drawableStart="@drawable/ic_security_white"

        />
    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_below="@+id/phone"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:textColorHint="@android:color/black"
        android:textColor="@android:color/black"
        android:ems="10"

        />

    <CheckBox
        android:id="@+id/conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:text="@string/accept_terms_and_conditions"
        android:checked="true"
        android:textColor="@android:color/black"
        android:onClick="showToast"
        android:layout_centerHorizontal="true"

        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/conditions"
        android:layout_centerHorizontal="true"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@android:color/primary_text_dark"
        android:layout_marginTop="50dp"
        android:onClick="createAccount"
        />





</RelativeLayout>